add some content to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>online quiz</title>
+    <div class=""container">
+        <div class="headingOnlineQuiz">
+            <h1>online quiz</h1>
+        </div>
+        <div class="question">Question</div>
+        <div class="chooseAnswer">
+        <div class="selectAnswer">Answer1</div>
+        <div class="selectAnswer">Answer2</div>
+        <div class="selectAnswer">Answer3</div>
+    </div>
+    <button type="submit" class="btn">start quiz</button>
+    <button type="submit" classs="btn">Next question</button>
+    </div>
 
 </head>
 <body>
