--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>online quiz</title>
-    <div class=""container">
+    
+</head>
+<body>
+    <div class="container">
+        <div class="onlineQuizApp">
         <div class="headingOnlineQuiz">
             <h1>online quiz</h1>
         </div>
@@ -21,10 +25,7 @@
     <button type="submit" class="btn">start quiz</button>
     <button type="submit" classs="btn">Next question</button>
     </div>
-
-</head>
-<body>
-    
+</div>
 </body>
 <script scr="assets/js/script.js"></script>
 </html>
