--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="onlineQuizApp">
-        <div class="headingOnlineQuiz">
-            <h1>online quiz</h1>
-        </div>
-        <div class="question">Question</div>
-        <div class="chooseAnswer">
-        <div class="selectAnswer">Answer1</div>
-        <div class="selectAnswer">Answer2</div>
-        <div class="selectAnswer">Answer3</div>
+        <div id="onlineQuiz-container" class="hide">
+        <div id="question">Question</div>
+        <div id="chooseAnswer" class="btn-grid">
+        <button class="btn">option1</button>
+        <button class="btn">option2</button>
+        <button class="btn">option3</button>
+        <button class="btn">option4</button>    
     </div>
-    <button type="submit" class="btn">start quiz</button>
-    <button type="submit" classs="btn">Next question</button>
     </div>
-</div>
+    <div class="controls">
+    <button id="start-btn" class="btn start-btn">start</button>
+    <button id="next-btn" classs="btn next-btn">Next</button>
+    </div>
+    </div>
+
 </body>
 <script scr="assets/js/script.js"></script>
 </html>
