add images on index.html

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 <body>
     <div class="container">
         <div id="onlineQuiz-container" class="hide">
-        <div id="question">Question</div>
+        <div id="question">Waht is the England national animal?</div>
         <div id="chooseAnswer" class="btn-grid">
-        <button class="btn">option1</button>
-        <button class="btn">option2</button>
-        <button class="btn">option3</button>
-        <button class="btn">option4</button>    
+            <img src = "assets/images/image.png" alt="picture of lion">
+            <img src="assets/images/image copy.png" alt="picture of monkey">
+            <img src="assets/images/image copy 2.png" alt="picture of tiger">
     </div>
     </div>
     <div class="controls">
