update some styles

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 </head>
 <body>
     <div class="container">
+        <h1>Simple quiz</h1>
         <div id="onlineQuiz-container" class="hide">
-        <div id="question">Waht is the England national animal?</div>
+        <h2 id="question">General questions?</h2>
         <div id="chooseAnswer" class="btn-grid">
-            <img src = "assets/images/image.png" alt="picture of lion">
-    <img src="assets/images/image copy.png" alt="picture of monkey">
-            <img src="assets/images/image copy 2.png" alt="picture of tiger">
-    </div>
+            <button class="btn">Image1</button>
+            <button class="btn">Image2</button>
+            <button class="btn">Image3</button>
+         </div>
     </div>
     <div class="controls">
     <button id="start-btn" class="btn start-btn">start</button>
-    <button id="next-btn" classs="btn next-btn">Next</button>
+    <button id="next-btn" classs="btn next-btn hide">Next</button>
     </div>
     </div>
 
