finish html and css

--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
 </head>
 <body>
     <div class="container">
-        <h1>Simple quiz</h1>
+        <h1 class="">Simple quiz</h1>
+        <p class="wishes">All the Best!!</p>
         <div id="onlineQuiz-container" class="hide">
         <h2 id="question">General questions?</h2>
         <div id="chooseAnswer" class="btn-grid">
-            <button class="btn">Image1</button>
-            <button class="btn">Image2</button>
-            <button class="btn">Image3</button>
+            <img id="image2" src="assets/images/image2.png" alt="">
+            <img id="image1" src="assets/images/image1.png" alt="">
+             <img id="image" src= "assets/images/image.png" alt="">
          </div>
+         <div id="sunmit-answer">correct</div>
     </div>
     <div class="controls">
-    <button id="start-btn" class="btn start-btn">start</button>
-    <button id="next-btn" classs="btn next-btn hide">Next</button>
+    <button id="start-btn" class="btn start-btn">Start</button>
+    <button id="next-btn" class="btn next-btn hide">Next</button>
     </div>
     </div>
-
+    <script src="assets/js/script.js"></script>
 </body>
-<script scr="assets/js/script.js"></script>
+
 </html>
