--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
     <div class="container">
+        <div id="menu">
         <h1 class="">Simple quiz</h1>
         <p class="wishes">All the Best!!</p>
+    </div>
         <div id="onlineQuiz-container" class="hide">
         <h2 id="question">General questions?</h2>
         <div id="chooseAnswer" class="btn-grid">
