--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div id="onlineQuiz-container" class="hide">
         <h2 id="question">General questions?</h2>
         <div id="chooseAnswer" class="btn-grid">
-            <img id="image2" src="assets/images/image2.png" alt="">
-            <img id="image1" src="assets/images/image1.png" alt="">
-             <img id="image" src= "assets/images/image.png" alt="">
+            <img id="image2" src="" alt="">
+            <img id="image1" src="" alt="">
+             <img id="image" src= "" alt="">
          </div>
          <div id="sunmit-answer">correct</div>
     </div>
