--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img id="image1" src="" alt="">
              <img id="image" src= "" alt="">
          </div>
-         <div id="sunmit-answer">correct</div>
+         <div id="submit-answer">correct</div>
     </div>
     <div class="controls">
     <button id="start-btn" class="btn start-btn">Start</button>
