--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div id="onlineQuiz-container" class="hide">
         <h2 id="question">General questions?</h2>
         <div id="chooseAnswer" class="btn-grid">
-            <img id="image2" src="" alt="">
-            <img id="image1" src="" alt="">
-             <img id="image" src= "" alt="">
+            <img class="image" src="" alt="">
+            <img class="image" src="" alt="">
+             <img class="image" src= "" alt="">
          </div>
          <div id="submit-answer">correct</div>
     </div>
