--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
         <div id="onlineQuiz-container" class="hide">
         <h2 id="question">General questions?</h2>
-        <div id="chooseAnswer" class="btn-grid">
+        <div id="chooseAnswer" class="">
             <img class="image" src="" alt="">
             <img class="image" src="" alt="">
              <img class="image" src= "" alt="">
