--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div id="onlineQuiz-container" class="hide">
         <h2 id="question">General questions?</h2>
         <div id="chooseAnswer" class="">
-            <button class="butn"><img class="image" src="" alt=""></button>
-            <button class="butn"><img class="image" src="" alt=""></button>
-            <button class="butn"><img class="image" src= "" alt=""></button>
+            <img class="image" src="" alt="">
+            <img class="image" src="" alt="">
+             <img class="image" src= "" alt="">
          </div>
          <div id="submit-answer">correct</div>
     </div>
