--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img class="image" src="" alt="">
 
          </div>
-         <div id="submit-answer">correct</div>
+         <p id="submit-answer">answer is:</p>
     </div>
     <div class="controls">
     <button id="start-btn" class="btn start-btn">Start</button>
