add logo to the image

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     
 </head>
 <body>
+    <div id = 'logo'class="">
+        <img class = "logo-image" src = "assets/images/logo.png" alt = "Online-Quiz-logo">
+    </div>
     <div class="container">
         <div id="menu">
         <h1 class="">Simple quiz</h1>
-        <p class="wishes">All the Best!!</p>
+        
     </div>
         <div id="onlineQuiz-container" class="hide">
         <h2 id="question">General questions?</h2>
