added media query for small screens

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -11,29 +12,29 @@
     
 </head>
 <body>
-    <div id = 'logo'class="">
-        <img class = "logo-image" src = "assets/images/logo.png" alt = "Online-Quiz-logo">
+    <div id='logo' class="logo-image">
+        <img src = "assets/images/logo.png" alt = "Online-Quiz-logo">
     </div>
-    <div class="container">
-        <div id="menu">
+    <div id="main-box" class="container">
+        <!--<div id="menu">
         <h1 class="">Simple quiz</h1>
-        
-    </div>
+    </div> -->
         <div id="onlineQuiz-container" class="hide">
-        <h2 id="question">General questions?</h2>
+        <h2 id="question" class="text-center">General questions?</h2>
         <div id="chooseAnswer" class="">
             <img class="image" src="" alt="">
             <img class="image" src="" alt="">
             <img class="image" src="" alt="">
 
          </div>
-         <p id="submit-answer">answer is:</p>
+         <p id="submit-answer" class="text-center">answer is:</p>
     </div>
     <div class="controls">
-    <button id="start-btn" class="btn start-btn">Start</button>
+    <button id="start-btn" class="btn btn-warning start-btn">Start</button>
     <button id="next-btn" class="btn next-btn hide">Next</button>
     </div>
-    </div>
+</div>
+
     <script src="assets/js/script.js"></script>
 </body>
 
