--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
     <div class="controls">
     <button id="start-btn" class="btn btn-warning start-btn">Start</button>
+    <button id="playagain" class="btn play-again hide">PlayAgain</button>
     <button id="next-btn" class="btn next-btn hide">Next</button>
     </div>
 </div>
