add heading element

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     
 </head>
 <body>
+    <h1 id="heading">Welcome to online quiz Game!!</h1>
     <div id='logo' class="logo-image">
         <img src = "assets/images/logo.png" alt = "Online-Quiz-logo">
     </div>
-    <div id="main-box" class="container">
+    <div id="main-box" class="container hide">
         <!--<div id="menu">
         <h1 class="">Simple quiz</h1>
     </div> -->
@@ -30,12 +31,12 @@
          <p id="submit-answer" class="text-center">answer is:</p>
     </div>
     <div class="controls">
-    <button id="start-btn" class="btn btn-warning start-btn">Start</button>
-    <button id="playagain" class="btn play-again hide">PlayAgain</button>
     <button id="next-btn" class="btn next-btn hide">Next</button>
     </div>
-</div>
-
+      </div>
+      <div class="startQuiz">
+      <button id="start-btn" class="btn btn-warning start-btn">Start</button>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 
