add fifferent logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <h1 id="heading">Welcome to online quiz Game!!</h1>
     <div id='logo' class="logo-image">
-        <img src = "assets/images/logo.png" alt = "Online-Quiz-logo">
+        <img src = "assets/images/logo2.png" alt = "Online-Quiz-logo">
     </div>
     <div id="main-box" class="container hide">
         <!--<div id="menu">
