add quiz game again

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     </div>
     <div class="controls">
     <button id="next-btn" class="btn next-btn hide">Next</button>
+    <button id="play-again" class="btn play-again ">play again</button>
+
     </div>
       </div>
       <div class="startQuiz">
